# cria-do-tatame

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PIPELINE_AI_GUIDE.md  README.md  README_IMPLEMENTATION_V03.md  apk  capacitor.config.json  docker-compose.yml  export_presets.cfg  game.js  index.html  manifest.webmanifest  package.json  project.godot  requirements.txt  style.css  sw.js
.criaforge/: agents.yaml  config.yaml  quality_gates.yaml
ai_lore_guardian/: README.md  __init__.py  config.yaml  lore_guardian_server.py  lore_rules.py  rag_service.py  requirements.txt  schemas.py  settings.py
art/: STYLE_GUIDE_VISUAL_REFERENCES.md
backend/: Dockerfile  requirements.txt
data/: ai_config.json  arenas.json  career_structure.json  characters.json  combat_deck_schema.json  combat_system_core.json  cria_live_posts.json  dialogues.json  economy.json  factions.json  finais_adultos.json  missions.json  progression.json  reputation_events.json  ruan_deck_inicial.json  settings.json  sponsors.json  techniques.json  (+3 more)
tradutor-produtor-de-cria/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
tradutor-produtor-de-cria/config/branding/: boxedecria_config.yaml
tradutor-produtor-de-cria/config/instagram/: algorithm_secrets.json  posting_times.json
tradutor-produtor-de-cria/config/neuromarketing/: jung_archetypes.yaml
tradutor-produtor-de-cria/src/: cli.py
tradutor-produtor-de-cria/tests/: test_ebook_production.py  test_instagram.py  test_neuromarketing.py  test_sales.py  test_translation.py
(+619 files in other folders)
